--- a/test2.html
+++ b/test2.html
@@ -1,4 +1,4 @@
 <h1>My First Website</h1>
-<p>My fav color is red
+<p>My fav color is <span style="color:red;">red</span>
 	and i think it would be a good idea to learn this.
 	I hope in 6months I will be finding a new job in Development</p>
