--- a/Portfolio.html
+++ b/Portfolio.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Dale Owen</title>
 </head>
-<body>
+<body style="background-color: skyblue;">
 <h1 style="color:Green; text-decoration:underline;"> 
 Self portfolio</h1>
 <h2>This is a quick run down of myself</h2>
