fixed a few things

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
+<header>
 	<title>Avatar Ang</title>
 	<link rel="stylesheet" type="text/css" href="css/hero.css">
-</head>
+</header>
 <body>
 	<div class="wrapper">
 	<header>
@@ -23,18 +23,18 @@
 		<p class="caption"> This is Ang in action</p>
 		<h2>Ang's friends</h2>
 		<ul>
-			<li><a href="https://static.wikia.nocookie.net/avatar/images/7/7a/Katara_smiles_at_coronation.png/revision/latest/scale-to-width-down/333?cb=20150104171449" target="_blank" title="Visit Katara's page">Katara</a></li>
+			<li><a href="https://static.wikia.nocookie.net/avatar/images/7/7a/Katara_smiles_at_coronation.png/revision/latest/scale-to-width-down/333?cb=20150104171449" target="_blank" title="Visit Katara's page">Katara</a> the water bender</li>
 			
-			<li><a href="https://static.wikia.nocookie.net/avatar/images/c/cc/Sokka.png/revision/latest/scale-to-width-down/333?cb=20140905085428" target="_blank" title="Visit Sokka's page"> Sokka</a></li>
+			<li><a href="https://static.wikia.nocookie.net/avatar/images/c/cc/Sokka.png/revision/latest/scale-to-width-down/333?cb=20140905085428" target="_blank" title="Visit Sokka's page"> Sokka</a> with a boomerang</li>
 			
-			<li><a href="https://static.wikia.nocookie.net/avatar/images/4/46/Toph_Beifong.png/revision/latest/scale-to-width-down/333?cb=20131230122047" target="_blank" title="Visit Toph's Page"> Toph</a></li>
+			<li><a href="https://static.wikia.nocookie.net/avatar/images/4/46/Toph_Beifong.png/revision/latest/scale-to-width-down/333?cb=20131230122047" target="_blank" title="Visit Toph's Page"> Toph</a> an earth bender</li>
 		</ul>
 		</div>
 		<footer>
 			<ul>				
-				<li>Made by <a href="https://www.linkedin.com/in/dale-owen-02a053125/" target="_blank" title="visit my Linkedin Profile"> Dale</a></li>
+				<li>Made by <a href="https://www.linkedin.com/in/dale-owen-02a053125/" target="_blank" title="Visit my Linkedin Profile"> Dale</a></li>
 				<li>Made during a class</li>
-				<li>&copy; 2022</li>
+					<li>&copy; 2022</li>
 			</ul>
 		</footer>
 	</div>
